--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.9.0",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
