--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.9.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
